feat: update profile
